# Angry_Bird_Alike

./: CMakeLists.txt  Doxyfile  README.md
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/ProblemStatementAndGoals/: 1          game problem statement.tex  ProblemStatement.aux  ProblemStatement.tex
docs/Reflection/: Reflection.tex
docs/SRS/: 2.             SRS.docx  2.             SRS.tex  SRS.tex
docs/VnVPlan/: VnVPlan.tex  VnV_Plan.tex  VnVplan.tex
docs/VnVReport/: VnVReport.tex
docs/coverage_report/: cmd_line
docs/coverage_report/src/: Game.cpp.gcov.html
docs/coverage_report/test/: gameTest.cpp.func-c.html  gameTest.cpp.func.html  gameTest.cpp.gcov.html
html/: _entity_8h.html  _entity_8h_source.html  _game_8h.html  _game_8h_source.html  _physics_8h.html  _physics_8h_source.html  _state_8h.html  _state_8h_source.html  annotated.html  class_entity-members.html  class_entity.html  class_game-members.html  class_game.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
include/: Entity.h  Game.h  Physics.h  State.h
latex/: _entity_8h.tex  _entity_8h_source.tex  _game_8h.tex  _game_8h_source.tex  _physics_8h.tex  _physics_8h_source.tex  _state_8h.tex  _state_8h_source.tex  annotated.tex  class_entity.tex  class_game.tex  files.tex  main_8cpp.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
src/: Entity.cpp  Game.cpp  Physics.cpp  main.cpp
test/: CMakeLists.txt  gameTest.cpp  testing.cpp
